--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
    "name": "password_generator",
    "private": true,
    "version": "0.0.0",
+   "homepage": "https://vikas4real.github.io/Password-Generator/",
    "type": "module",
    "scripts": {
       "dev": "vite",
       "build": "vite build",
       "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-      "preview": "vite preview"
+      "preview": "vite preview",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d dist"
    },
    "dependencies": {
       "react": "^18.2.0",
